# VoxelWeaverApp

./: .gitignore  Cargo.toml  README.md  build.rs
demo/: project.terrain  unreal.ush
src/: app.rs  biome.rs  compiler.rs  graph.rs  main.rs  project.rs  terrain.rs
src/app/: action.rs  biome.rs  graph.rs  texture_loader.rs  viewport.rs
src/app/graph/: ui.rs
src/app/viewport/: biomes.rs  terrain.rs
src/compiler/: biomes.rs  blank.ush  blank.wgsl  common.ush  common.wgsl  fnl.wgsl  graph.rs  postamble.ush  postamble.wgsl  preamble.ush  preamble.wgsl  vertex_color.ush
src/graph/: node_types.rs
src/graph/node_types/: biome.rs  heightmap.rs  math.rs  noise.rs  terrain.rs  trig.rs  vector.rs
src/terrain/: biome_preview.rs  meshgen.rs  renderer.rs  texture_atlas.rs
src/terrain/biome_preview/: shader.wgsl
src/terrain/meshgen/: meshgen.wgsl  tri_table.rs  tricount.wgsl
src/terrain/renderer/: shader.wgsl
src/terrain/texture_atlas/: blit.wgsl
src/util/: ui.rs
