[package]
name = "VoxelWeaver"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.18", features = [ "derive" ] }
glam = { version = "0.29.0", features = [ "bytemuck", "serde" ] }
egui = "0.28"
eframe = {version = "0.28", features = [ "wgpu" ] }
egui_extras = "0.28"
serde = "1.0"
rfd = "0.15.0"
serde_json = "1.0"
pathdiff = "0.2.2"
egui-phosphor = "=0.6.0"
code-fuzzy-match = "0.2.2"
walkdir = "2"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "bmp"]

[build-dependencies]
winresource = "0.1.19"
